@@ -21,3 +21,4 @@ billiob (Boris Faure) <billiob@gmail.com>
 Govindaraju SM <govi.sm@samsung.com> <govism@gmail.com>
 Prince Kumar Dubey <prince.dubey@samsung.com> <prince.dubey@gmail.com>
 David Seikel <onefang at gmail.com>
+Mikael Sans <sans.mikael@gmail.com>
